--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,3 +21,17 @@ services:
       - /app/node_modules
     environment:
       NODE_ENV: development
+
+  database:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: eurosong
+    ports:
+      - "3306:3306"
+    networks:
+      - app_network
+
+networks:
+  app_network:
+    driver: bridge
