--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -17,15 +20,17 @@
   },
   "homepage": "https://github.com/Collinvdv/eurosong-api-2024#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "mysql2": "^3.11.3"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
