--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^26.6.2",
