--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and Push Backend Image
         run: |
-          docker build -t ghcr.io/<jouw-gebruikersnaam>/<backend-image>:latest ./backend
-          docker push ghcr.io/<jouw-gebruikersnaam>/<backend-image>:latest
+          docker build -t ghcr.io/moadt18/examen-2024-backend:latest ./backend
+          docker push ghcr.io/moadt18/examen-2024-backend:latest
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ghcr.io/<jouw-gebruikersnaam>/<frontend-image>:latest ./frontend
-          docker push ghcr.io/<jouw-gebruikersnaam>/<frontend-image>:latest
+          docker build -t ghcr.io/moadt18/examen-2024-frontend:latest ./frontend
+          docker push ghcr.io/moadt18/examen-2024-frontend:latest
