Test workflow trigger

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,7 @@ COPY package*.json ./
 # 4. Install dependencies
 RUN npm install
 
-# 5. Copy the rest of the files
+# 5. Copy the rest of the files, including babel.config.js and .babelrc
 COPY . .
 
 # 6. Set environment variable for build
