--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,36 @@
 name: Build and Push Docker Images
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and Push Backend Image
         run: |
-          docker build -t ghcr.io/moadt18/examen-2024-backend:latest ./backend
+          docker build -t ghcr.io/moadt18/examen-2024-backend:latest -t ghcr.io/moadt18/examen-2024-backend:${{ github.sha }} ./backend
           docker push ghcr.io/moadt18/examen-2024-backend:latest
+          docker push ghcr.io/moadt18/examen-2024-backend:${{ github.sha }}
+
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ghcr.io/moadt18/examen-2024-frontend:latest ./frontend
+          docker build -t ghcr.io/moadt18/examen-2024-frontend:latest -t ghcr.io/moadt18/examen-2024-frontend:${{ github.sha }} ./frontend
           docker push ghcr.io/moadt18/examen-2024-frontend:latest
+          docker push ghcr.io/moadt18/examen-2024-frontend:${{ github.sha }}
