--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,8 @@ on:
       - main
 
 jobs:
-  test:
-    name: Run Tests
+  setup:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -22,20 +20,37 @@ jobs:
         with:
           node-version: '18'
 
+      # Caching dependencies for both frontend and backend
+      - name: Cache Node.js dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/backend/package-lock.json', '**/frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install Backend Dependencies
         run: |
           cd backend
           npm install
 
-      - name: Run Backend Tests
-        run: |
-          cd backend
-          npm test
-
       - name: Install Frontend Dependencies
         run: |
           cd frontend
           npm install
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: setup  # Ensure the setup job is complete before running tests
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Run Backend Tests
+        run: |
+          cd backend
+          npm test
 
       - name: Run Frontend Tests
         run: |
