--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   database:
     image: mysql:8.0
@@ -10,6 +8,8 @@ services:
       - "3306:3306"
     networks:
       - app_network
+    volumes:
+      - db_data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
@@ -59,6 +59,11 @@ services:
         condition: service_healthy
     networks:
       - app_network
+
 networks:
   app_network:
     driver: bridge
+
+volumes:
+  db_data:
+    driver: local
