--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,21 +1,25 @@
 server {
-    listen 80;
-    server_name localhost;
+  listen 80;
+  server_name localhost;
 
-    # Serve static files
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
-    }
+  location / {
+    root /usr/share/nginx/html;
+    index index.html;
+    try_files $uri /index.html;
+  }
 
-    # Proxy API requests to the backend
-    location /api/ {
-        proxy_pass http://backend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+  location /api/ {
+    proxy_pass http://backend:3000/api/; 
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+
+    # NO rewrite lines, no extra slash weirdness
+  }
+
+  location /test/ {
+    proxy_pass http://backend:3000/;
+  }
 }
