--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,3 +1,4 @@
+# pr-checks.yml (example)
 name: Pull Request Checks
 
 on:
@@ -11,13 +12,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-
-      # Caching dependencies
       - name: Cache Node.js dependencies
         uses: actions/cache@v3
         with:
@@ -26,48 +24,64 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install Dependencies (Backend)
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      # Re-install dependencies
+      - name: Install dependencies (Backend)
         run: |
           cd backend
           npm install
 
-      - name: Install Dependencies (Frontend)
+      - name: Install dependencies (Frontend)
         run: |
           cd frontend
           npm install
 
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: setup  # Ensures the setup job runs before test
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Run Tests (Backend)
+      - name: Test Backend
         run: |
           cd backend
           npm test
 
-      - name: Run Tests (Frontend)
+      - name: Test Frontend
         run: |
           cd frontend
           npm test
 
   lint:
-    name: Run Linting
     runs-on: ubuntu-latest
-    needs: setup  # Ensures the setup job runs before lint
+    needs: setup
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Run Linter (Backend)
+      # Re-install dependencies
+      - name: Install dependencies (Backend)
+        run: |
+          cd backend
+          npm install
+
+      - name: Install dependencies (Frontend)
+        run: |
+          cd frontend
+          npm install
+
+      - name: Lint Backend
         run: |
           cd backend
           npm run lint
 
-      - name: Run Linter (Frontend)
+      - name: Lint Frontend
         run: |
           cd frontend
           npm run lint
