--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mysql2": "^3.11.3"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
