--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  ci:
+  lint-and-test-backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,14 +18,9 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install backend
+      - name: Install dependencies
         run: |
           cd backend
-          npm install
-
-      - name: Install frontend
-        run: |
-          cd frontend
           npm install
 
       - name: Lint backend
@@ -33,15 +28,31 @@ jobs:
           cd backend
           npm run lint
 
-      - name: Lint frontend
-        run: |
-          cd frontend
-          npm run lint
-
       - name: Test backend
         run: |
           cd backend
           npm test
+
+  lint-and-test-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Lint frontend
+        run: |
+          cd frontend
+          npm run lint
 
       - name: Test frontend
         run: |
