--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "dev": "nodemon --legacy-watch index.js",
+    "start": "node index.js"
+
   },
   "repository": {
     "type": "git",
@@ -38,6 +41,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "supertest": "^7.0.0"
   }
 }
