--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host local-ip --poll",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "jest",
@@ -19,19 +19,21 @@
     "@babel/eslint-parser": "^7.12.16",
     "@babel/preset-env": "^7.26.0",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/utils": "^8.18.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "^1.3.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^26.6.2",
     "vue-jest": "^4.0.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-dev-server": "^4.15.2"
   },
   "eslintConfig": {
     "root": true,
