--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-winston": "^4.2.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
     "winston": "^3.17.0"
